--- a/.github/workflows/update-llms.yml
+++ b/.github/workflows/update-llms.yml
@@ -2,7 +2,7 @@ name: Update LLMs Context
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Every Sunday at midnight UTC
+    - cron: '0 0 * * *'  # Daily at midnight UTC
   workflow_dispatch:  # Allow manual trigger
 
 permissions:
